<resources>
    <string name="app_name">Viet Kitchen</string>
    <string name="app_name_version">Viet Kitchen %s</string>
    <string name="label_splash_screen"/>
    <string name="label_login">login</string>
    <string name="label_home">home</string>
    <string name="label_favorites">favorites</string>
    <string name="label_calendar">calendar</string>
    <string name="label_profile">profile</string>
    <string name="message_error">Oops! something went wrong.</string>
    <string name="label_loading">loading</string>
    <string name="draw_nav_group_item_all">all</string>
    <string name="fui_progress_dialog_signing_up">Creating your shiny new account…</string>
    <string name="no_data">no data found</string>
    <string name="no_favorite_recipe">no data</string>
    <string name="default_snack_bar_action">action</string>
    <string name="label_ok">@android:string/ok</string>
    <string name="label_cancel">@android:string/cancel</string>
    <string name="label_hide">hide</string>
    <string name="label_new">new</string>
    <string name="label_delete">delete</string>
    <string name="label_search">search</string>
    <string name="label_searching">searching</string>
    <string name="label_change_layout">change layout</string>
    <string name="title_options">options</string>

    <!--drawer navigation-->
    <string name="drawer_nav_item_title">%s (%d)</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_temp">Temp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--profile screen-->
    <string name="label_displayName">display name: %s</string>
    <string name="label_email">email: %s</string>
    <string name="label_favorite_recipes">liked recipes: %d</string>
    <string name="label_notification">nhận thông báo</string>
    <string name="label_logout">log out</string>
    <string name="message_snack_bar_logout">this action will lead to forced close the app</string>

    <!--detail activity-->
    <string name="demo_desc">Blah Blah Blah Blah Blah Blah Blah!!!!!!</string>
    <string name="recipe_picture_content_description">recipe picture</string>
    <string name="label_spices">Spices:</string>
    <string name="label_notes">Notes</string>
    <string name="label_ingredients">Ingredients:</string>
    <string name="label_process">Process:</string>
    <string name="label_pre_process">Pre Process:</string>
    <string name="context_annotation"><annotation src="@drawable/https://i.imgur.com/0jQAdlZ.jpg">&#2228;</annotation></string>
    <string name="message_confirm_unlike">make sure you want to unlike this recipe \"%s\"</string>

    <!--input dialog-->
    <string name="hint_input_ingredient_name">enter name</string>
    <string name="hint_input_ingredient_notes">enter notes</string>
    <string name="hint_input_ingredient_quantity">enter quantity</string>
    <string name="hint_input_ingredient_unit">enter unit</string>
    <string name="hint_input_ingredient_unit_default">g</string>

    <!--progress dialog-->
    <string name="uploading_image">uploading images</string>
    <string name="store_recipe">store recipe</string>
    <string name="msg_prepare_uploading">preparing for uploading</string>
    <string name="msg_start_storing_recipe">prepare for storing the recipe!</string>
    <string name="msg_extract_images">extract Image path from the recipe\'s content</string>
    <string name="msg_optimizing_images">optimizing images to upload</string>
    <string name="msg_start_uploading_images">uploading images</string>
    <string name="msg_store_recipe_success">the recipe has been stored successfully!</string>
    <string name="msg_store_recipe_failed">Opps, Something was wrong when storing the recipe, please try later!</string>
    <string name="msg_update_category">update the category</string>
    <string name="msg_put_new_tags">putting tags</string>
    <string name="msg_store_recipe_finished">done!</string>
    <string name="progress">%d%%</string>
    <string name="progress_counter">%d/%d files</string>

    <!--admin activity-->
    <string name="label_option_style_bold">bold</string>
    <string name="label_option_insert_image">insert image</string>
    <string name="label_option_paste">paste</string>

    <!--home activity-->
    <string name="msg_double_tab_to_scroll_to_top">double tab to scroll to top</string>
</resources>
