<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@id/splash_screen_dest">

    <fragment
        android:id="@+id/splash_screen_dest"
        android:name="com.example.linh.vietkitchen.ui.screen.splashScreen.SplashScreenFragment"
        android:label="@string/label_splash_screen"
        tools:layout="@layout/activity_splash_screen">
        <action
            android:id="@+id/action_splash_screen_dest_to_home_dest"
            app:destination="@id/home_dest"
            app:launchSingleTop="true"
            app:popUpToInclusive="true"
            app:popUpTo="@id/splash_screen_dest"/>
        <action
            android:id="@+id/action_splash_screen_dest_to_loginActivity"
            app:destination="@id/login_dest"/>
    </fragment>

    <fragment
        android:id="@+id/login_dest"
        android:name="com.example.linh.vietkitchen.ui.screen.login.LoginFragment"
        android:label="@string/label_login">
        <action
            android:id="@+id/action_loginActivity_to_home_dest"
            app:destination="@id/home_dest"/>
    </fragment>

    <fragment
        android:id="@+id/home_dest"
        android:name="com.example.linh.vietkitchen.ui.screen.home.homeFragment.HomeFragment"
        android:label="@string/label_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_dest_to_Detail"
            app:destination="@id/detail_dest"/>
    </fragment>
    <fragment
        android:id="@+id/favorite_dest"
        android:name="com.example.linh.vietkitchen.ui.screen.home.favorite.FavoriteFragment"
        android:label="@string/label_favorites"
        tools:layout="@layout/fragment_favorite"/>
    <fragment
        android:id="@+id/profile_dest"
        android:name="com.example.linh.vietkitchen.ui.screen.home.profile.ProfileFragment"
        android:label="@string/label_profile"
        tools:layout="@layout/fragment_profile"/>
    <fragment
        android:id="@+id/detail_dest"
        android:name="com.example.linh.vietkitchen.ui.screen.detailActivity.RecipeDetailFragment"
        android:label="detail"
        tools:layout="@layout/activity_detail">
    </fragment>
</navigation>