<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_dest"
        android:enabled="true"
        android:checked="true"
        android:icon="@drawable/ic_home_outline"
        android:title="@string/label_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/favorite_dest"
        android:enabled="true"
        android:icon="@drawable/ic_heart_outline"
        android:title="@string/label_favorites"
        app:showAsAction="ifRoom" />
    <!--<item-->
        <!--android:id="@+id/action_calendar"-->
        <!--android:enabled="true"-->
        <!--android:icon="@drawable/ic_calendar_clock"-->
        <!--android:query="@string/label_calendar"-->
        <!--app:showAsAction="ifRoom" />-->
    <item
        android:id="@+id/profile_dest"
        android:enabled="true"
        android:icon="@drawable/ic_account_outline"
        android:title="@string/label_profile"
        app:showAsAction="ifRoom" />
</menu>