<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/padding_8dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:letterSpacing="0.1"
        android:text="@string/hint_ingredients"
        android:textSize="18sp"
        tools:targetApi="lollipop"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textMultiLine"
            android:maxLines="2"
            android:hint="@string/hint_input_ingredient_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.5"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/edtQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="0dp"
                android:paddingStart="0dp"
                android:paddingEnd="@dimen/padding_8dp"
                android:paddingRight="@dimen/padding_8dp"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="100"
                android:hint="@string/hint_input_ingredient_quantity" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.5"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/edtUnit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:maxLength="10"
                android:paddingLeft="0dp"
                android:paddingStart="0dp"
                android:paddingEnd="@dimen/padding_8dp"
                android:paddingRight="@dimen/padding_8dp"
                android:text="@string/hint_input_ingredient_unit_default"/>

        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textMultiLine"
            android:maxLines="4"
            android:hint="@string/hint_input_ingredient_notes" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="96dp"
            android:layout_height="48dp"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:layout_marginRight="@dimen/margin_8dp"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:theme="@style/CancelButtonLightTheme"
            android:text="@string/label_cancel"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:text="@string/label_ok"/>
    </LinearLayout>
</LinearLayout>